--- a/DnDCharCtor.Common/Resources/StringResources.de-DE.resx
+++ b/DnDCharCtor.Common/Resources/StringResources.de-DE.resx
@@ -162,7 +162,7 @@
   <data name="CharacterEditor.Edit" xml:space="preserve">
     <value>Bearbeite Charakter "{0}"</value>
   </data>
-  <data name="NavMenu.Settings" xml:space="preserve">
+  <data name="Page.Settings" xml:space="preserve">
     <value>Einstellungen</value>
   </data>
 </root>
