--- a/DnDCharCtor.Common/Resources/StringResources.de-DE.resx
+++ b/DnDCharCtor.Common/Resources/StringResources.de-DE.resx
@@ -165,4 +165,7 @@
   <data name="Page.Settings" xml:space="preserve">
     <value>Einstellungen</value>
   </data>
+  <data name="Page.Home" xml:space="preserve">
+    <value>Startseite</value>
+  </data>
 </root>
