--- a/DnDCharCtor.Common/Resources/StringResources.de-DE.resx
+++ b/DnDCharCtor.Common/Resources/StringResources.de-DE.resx
@@ -168,4 +168,13 @@
   <data name="Page.Home" xml:space="preserve">
     <value>Startseite</value>
   </data>
+  <data name="Settings.SelectLanguage" xml:space="preserve">
+    <value>Sprache auswählen</value>
+  </data>
+  <data name="Settings.Languages.English" xml:space="preserve">
+    <value>English (Englisch)</value>
+  </data>
+  <data name="Settings.Languages.German" xml:space="preserve">
+    <value>German (Deutsch)</value>
+  </data>
 </root>
