Add: `LocalizationService` to support localization;

--- a/DnDCharCtor.Common/Resources/StringResources.en-US.resx
+++ b/DnDCharCtor.Common/Resources/StringResources.en-US.resx
@@ -175,6 +175,6 @@
     <value>English</value>
   </data>
   <data name="Settings.Languages.German" xml:space="preserve">
-    <value>German</value>
+    <value>Deutsch (German)</value>
   </data>
 </root>
