Update: Use internal API-Calls & Unsafe-Code to load all Language-Resources at Startup;

--- a/DnDCharCtor.Common/Resources/StringResources.de-DE.resx
+++ b/DnDCharCtor.Common/Resources/StringResources.de-DE.resx
@@ -175,6 +175,6 @@
     <value>English (Englisch)</value>
   </data>
   <data name="Settings.Languages.German" xml:space="preserve">
-    <value>German (Deutsch)</value>
+    <value>Deutsch</value>
   </data>
 </root>
