Fix: Translation due missing Reload when Language changed;

--- a/DnDCharCtor.Common/Resources/StringResources.de-DE.resx
+++ b/DnDCharCtor.Common/Resources/StringResources.de-DE.resx
@@ -177,4 +177,7 @@
   <data name="Settings.Languages.German" xml:space="preserve">
     <value>Deutsch</value>
   </data>
+  <data name="CharacterEditor.Personality.Edit" xml:space="preserve">
+    <value>Edit personality</value>
+  </data>
 </root>
