Fix: Translations in Dialog;

--- a/DnDCharCtor.Common/Resources/StringResources.de-DE.resx
+++ b/DnDCharCtor.Common/Resources/StringResources.de-DE.resx
@@ -178,6 +178,6 @@
     <value>Deutsch</value>
   </data>
   <data name="CharacterEditor.Personality.Edit" xml:space="preserve">
-    <value>Edit personality</value>
+    <value>Bearbeite Persönlichkeit</value>
   </data>
 </root>
