--- a/DnDCharCtor.Resources/StringResources.en-US.resx
+++ b/DnDCharCtor.Resources/StringResources.en-US.resx
@@ -121,87 +121,90 @@
     <value>DnDCharCtor</value>
   </data>
   <data name="Button.Edit" xml:space="preserve">
-    <value>Bearbeiten</value>
+    <value>Edit</value>
   </data>
   <data name="Character.Personality" xml:space="preserve">
-    <value>Persönlichkeit</value>
+    <value>Personality</value>
   </data>
   <data name="Button.Save" xml:space="preserve">
-    <value>Speichern</value>
+    <value>Save</value>
   </data>
   <data name="Button.Submit" xml:space="preserve">
-    <value>Übernehmen</value>
+    <value>Submit</value>
   </data>
   <data name="Character.Personality.Class" xml:space="preserve">
-    <value>Klasse</value>
+    <value>Class</value>
   </data>
   <data name="Character.Personality.Level" xml:space="preserve">
-    <value>Stufe</value>
+    <value>Level</value>
   </data>
   <data name="Character.Personality.Background" xml:space="preserve">
-    <value>Hintergrund</value>
+    <value>Background</value>
   </data>
   <data name="Character.Personality.PlayerName" xml:space="preserve">
-    <value>Name des Spielers</value>
+    <value>Player name</value>
   </data>
   <data name="Character.Personality.Race" xml:space="preserve">
-    <value>Volk</value>
+    <value>Race</value>
   </data>
   <data name="Character.Personality.Attitute" xml:space="preserve">
-    <value>Gesinnung</value>
+    <value>Attitute</value>
   </data>
   <data name="Character.Personality.Experience" xml:space="preserve">
-    <value>Erfahrungspunkte</value>
+    <value>Experience</value>
   </data>
   <data name="Character.Name" xml:space="preserve">
-    <value>Charaktername</value>
+    <value>Character name</value>
   </data>
   <data name="CharacterEditor.Create" xml:space="preserve">
-    <value>Erstelle einen Charakter</value>
+    <value>Create character</value>
   </data>
   <data name="CharacterEditor.Edit" xml:space="preserve">
-    <value>Bearbeite Charakter "{0}"</value>
+    <value>Edit character "{0}"</value>
   </data>
   <data name="Page.Settings" xml:space="preserve">
-    <value>Einstellungen</value>
+    <value>Settings</value>
   </data>
   <data name="Page.Home" xml:space="preserve">
-    <value>Startseite</value>
+    <value>Home</value>
   </data>
   <data name="Settings.SelectLanguage" xml:space="preserve">
-    <value>Sprache auswählen</value>
+    <value>Select language</value>
   </data>
   <data name="Settings.Languages.English" xml:space="preserve">
-    <value>English (Englisch)</value>
+    <value>English</value>
   </data>
   <data name="Settings.Languages.German" xml:space="preserve">
-    <value>Deutsch</value>
+    <value>Deutsch (German)</value>
   </data>
   <data name="CharacterEditor.Personality.Edit" xml:space="preserve">
-    <value>Bearbeite Persönlichkeit</value>
+    <value>Edit personality</value>
   </data>
   <data name="Settings.LanguageSettings" xml:space="preserve">
-    <value>Sprach-Einstellungen</value>
+    <value>Language settings</value>
   </data>
   <data name="Settings.ThemeSettings" xml:space="preserve">
-    <value>Farb-Thema-Einstellungen</value>
+    <value>Theme settings</value>
   </data>
   <data name="Settings.SelectTheme" xml:space="preserve">
-    <value>Farb-Thema auswählen</value>
+    <value>Select theme</value>
   </data>
   <data name="Settings.SelectColor" xml:space="preserve">
-    <value>Farbe auswählen</value>
+    <value>Select color</value>
   </data>
   <data name="Button.Ok" xml:space="preserve">
     <value>Ok</value>
   </data>
   <data name="Validation.ErrorSource" xml:space="preserve">
-    <value>Karte "{0}" hat folgende Validierungs-Fehler:</value>
+    <value>Card "{0}" has the following validation errors:</value>
   </data>
   <data name="Validation.CannotSave" xml:space="preserve">
-    <value>Speichern nicht möglich da ein paar Karten und Felder Validierungs-Fehler haben</value>
+    <value>Cannot save since some cards and fields have validation errors</value>
   </data>
   <data name="Validation.CannotSaveTitle" xml:space="preserve">
-    <value>Speichern nicht möglich</value>
+    <value>Cannot save</value>
+  </data>
+  <data name="Validation.RequiredField" xml:space="preserve">
+    <value>Field "{0}" is required</value>
   </data>
 </root>
