--- a/DnDCharCtor.Resources/StringResources.en-US.resx
+++ b/DnDCharCtor.Resources/StringResources.en-US.resx
@@ -210,4 +210,7 @@
   <data name="Validation_MaxLength" xml:space="preserve">
     <value>Text of field "{0}" must contain less or equal to "{1}" characters</value>
   </data>
+  <data name="Validation_range" xml:space="preserve">
+    <value>Value of field "{0}" must be between "{1}" and "{2}"</value>
+  </data>
 </root>
