Add: `FluentAccordion` to collapse `ChildContent`;

--- a/DnDCharCtor.Resources/StringResources.de-DE.resx
+++ b/DnDCharCtor.Resources/StringResources.de-DE.resx
@@ -213,4 +213,7 @@
   <data name="Validation_range" xml:space="preserve">
     <value>Wert von Feld "{0}" muss zwischen "{1}" und "{2}" liegen</value>
   </data>
+  <data name="Button_Properties" xml:space="preserve">
+    <value>Eigenschaften</value>
+  </data>
 </root>
