WIP: Virtual Keyboard hides input field. Also, there are problems with numeric input on Mobile (OnFocus or OnInput it deletes the input);
Comment: I know why I hate UI. Localization, Validation, UI, UX are only pain... The pain increases with various platforms and screen-sizes...;

--- a/DnDCharCtor.Resources/StringResources.resx
+++ b/DnDCharCtor.Resources/StringResources.resx
@@ -219,4 +219,7 @@
   <data name="Validation_RequiredParsedInteger" xml:space="preserve">
     <value>~Value of field "{0}" must be an integer</value>
   </data>
+  <data name="Validation_Tooltip_Required" xml:space="preserve">
+    <value>~Field is required</value>
+  </data>
 </root>
