--- a/DnDCharCtor.Resources/StringResources.de-DE.resx
+++ b/DnDCharCtor.Resources/StringResources.de-DE.resx
@@ -219,4 +219,7 @@
   <data name="Validation_RequiredParsedInteger" xml:space="preserve">
     <value>Wert von Feld "{0}" muss eine Ganz-Zahl sein</value>
   </data>
+  <data name="Validation_Tooltip_Required" xml:space="preserve">
+    <value>Pflichtfeld</value>
+  </data>
 </root>
