--- a/DnDCharCtor.Resources/StringResources.de-DE.resx
+++ b/DnDCharCtor.Resources/StringResources.de-DE.resx
@@ -264,4 +264,16 @@
   <data name="CharacterEditor_UploadImage" xml:space="preserve">
     <value>Verschiebe oder klicke hier um ein Bild hochzuladen</value>
   </data>
+  <data name="FileUpload_Loading" xml:space="preserve">
+    <value>Lade...</value>
+  </data>
+  <data name="FileUpload_Completed" xml:space="preserve">
+    <value>Abgeschlossen</value>
+  </data>
+  <data name="FileUpload_Cancelled" xml:space="preserve">
+    <value>Abgebrochen</value>
+  </data>
+  <data name="FileUpload_InProgress" xml:space="preserve">
+    <value>Lade {0}/{1} - {2}</value>
+  </data>
 </root>
