Update: `CurrentCharacter`-Page so that character can be persistent edited; Fix: Unable to Edit even when there are no changes; Add: `CreateCharacter`-Page that redirects to `EditCharacter` (this way `OnInitialized` is triggered); Fix: `HybridChache` that did not replace old entry with updated;

--- a/DnDCharCtor.Resources/StringResources.de-DE.resx
+++ b/DnDCharCtor.Resources/StringResources.de-DE.resx
@@ -276,4 +276,7 @@
   <data name="FileUpload_InProgress" xml:space="preserve">
     <value>Lade {0}/{1} - {2}</value>
   </data>
+  <data name="Button_EditCharacter" xml:space="preserve">
+    <value>Charakter-Bearbeitung</value>
+  </data>
 </root>
