--- a/DnDCharCtor.Resources/StringResources.resx
+++ b/DnDCharCtor.Resources/StringResources.resx
@@ -276,4 +276,7 @@
   <data name="FileUpload_InProgress" xml:space="preserve">
     <value>~Loading {0}/{1} - {2}</value>
   </data>
+  <data name="Button_EditCharacter" xml:space="preserve">
+    <value>~Edit character</value>
+  </data>
 </root>
