Add: `Characters`-Page;
ToDo: Update Style, Remove Click to edit, Edit-Button should direct to Edit-Page, Add Delete-Functionality;

--- a/DnDCharCtor.Resources/StringResources.de-DE.resx
+++ b/DnDCharCtor.Resources/StringResources.de-DE.resx
@@ -282,4 +282,7 @@
   <data name="Button_Reset" xml:space="preserve">
     <value>Zurücksetzen</value>
   </data>
+  <data name="Page_Characters" xml:space="preserve">
+    <value>Charaktere</value>
+  </data>
 </root>
