--- a/DnDCharCtor.Resources/StringResources.de-DE.resx
+++ b/DnDCharCtor.Resources/StringResources.de-DE.resx
@@ -285,4 +285,13 @@
   <data name="Page_Characters" xml:space="preserve">
     <value>Charaktere</value>
   </data>
+  <data name="Button_Select" xml:space="preserve">
+    <value>Auswählen</value>
+  </data>
+  <data name="Dialog_DeleteCharacterTitle" xml:space="preserve">
+    <value>Charakter löschen?</value>
+  </data>
+  <data name="Dialog_DeleteCharacterText" xml:space="preserve">
+    <value>Du bist dabei den folgenden Character zu löschen:</value>
+  </data>
 </root>
