Update: UX to make design more consistent and features easier to understand;

--- a/DnDCharCtor.Resources/StringResources.de-DE.resx
+++ b/DnDCharCtor.Resources/StringResources.de-DE.resx
@@ -294,4 +294,7 @@
   <data name="Dialog_DeleteCharacterText" xml:space="preserve">
     <value>Du bist dabei den folgenden Character zu löschen:</value>
   </data>
+  <data name="Button_Adapt" xml:space="preserve">
+    <value>Anpassen</value>
+  </data>
 </root>
