--- a/DnDCharCtor.Resources/StringResources.en-US.resx
+++ b/DnDCharCtor.Resources/StringResources.en-US.resx
@@ -147,8 +147,8 @@
   <data name="Character_Personality_Race" xml:space="preserve">
     <value>Race</value>
   </data>
-  <data name="Character_Personality_Attitute" xml:space="preserve">
-    <value>Attitute</value>
+  <data name="Character_Personality_Attitude" xml:space="preserve">
+    <value>Attitude</value>
   </data>
   <data name="Character_Personality_Experience" xml:space="preserve">
     <value>Experience</value>
@@ -296,5 +296,32 @@
   </data>
   <data name="Button_Adapt" xml:space="preserve">
     <value>Adapt</value>
+  </data>
+  <data name="Character_Properties_Strength" xml:space="preserve">
+    <value>Strength</value>
+  </data>
+  <data name="Character_Properties_Skill" xml:space="preserve">
+    <value>Skill</value>
+  </data>
+  <data name="Character_Properties_Constitution" xml:space="preserve">
+    <value>Constitution</value>
+  </data>
+  <data name="Character_Properties_Intelligence" xml:space="preserve">
+    <value>Intelligence</value>
+  </data>
+  <data name="Character_Properties_Wisdom" xml:space="preserve">
+    <value>Wisdom</value>
+  </data>
+  <data name="Character_Properties_Charisma" xml:space="preserve">
+    <value>Charisma</value>
+  </data>
+  <data name="Character_Properties_Inspiration" xml:space="preserve">
+    <value>Inspiration</value>
+  </data>
+  <data name="Character_Properties_TrainingBonus" xml:space="preserve">
+    <value>Training bonus</value>
+  </data>
+  <data name="Character_Properties_PassiveWisdomRecognition" xml:space="preserve">
+    <value>Passive Wisdom (Recognition)</value>
   </data>
 </root>
