--- a/DnDCharCtor.Resources/StringResources.de-DE.resx
+++ b/DnDCharCtor.Resources/StringResources.de-DE.resx
@@ -160,7 +160,7 @@
     <value>Erstelle einen Charakter</value>
   </data>
   <data name="CharacterEditor_Edit" xml:space="preserve">
-    <value>Bearbeite Charakter "{0}"</value>
+    <value>Bearbeite Eigenschaften</value>
   </data>
   <data name="Page_Settings" xml:space="preserve">
     <value>Einstellungen</value>
@@ -297,37 +297,37 @@
   <data name="Button_Adapt" xml:space="preserve">
     <value>Anpassen</value>
   </data>
-  <data name="Character_Properties_Strength" xml:space="preserve">
-    <value>Stärke</value>
-  </data>
-  <data name="Character_Properties_Skill" xml:space="preserve">
-    <value>Geschicklichkeit</value>
-  </data>
-  <data name="Character_Properties_Constitution" xml:space="preserve">
-    <value>Konstitution</value>
-  </data>
-  <data name="Character_Properties_Intelligence" xml:space="preserve">
-    <value>Intelligenz</value>
-  </data>
-  <data name="Character_Properties_Wisdom" xml:space="preserve">
-    <value>Weisheit</value>
-  </data>
-  <data name="Character_Properties_Charisma" xml:space="preserve">
-    <value>Charisma</value>
-  </data>
-  <data name="Character_Properties_Inspiration" xml:space="preserve">
-    <value>Inspiration</value>
-  </data>
-  <data name="Character_Properties_TrainingBonus" xml:space="preserve">
-    <value>Übungsbonus</value>
-  </data>
-  <data name="Character_Properties_PassiveWisdomRecognition" xml:space="preserve">
-    <value>Passive Weisheit (Wahrnehmung)</value>
-  </data>
-  <data name="CharacterEditor_Properties_Edit" xml:space="preserve">
-    <value>Bearbeite Eigenschaften</value>
-  </data>
   <data name="Character_Properties" xml:space="preserve">
     <value>Eigenschaften</value>
+  </data>
+  <data name="Character_Strength" xml:space="preserve">
+    <value>Stärke</value>
+  </data>
+  <data name="Character_Skill" xml:space="preserve">
+    <value>Geschicklichkeit</value>
+  </data>
+  <data name="Character_Constitution" xml:space="preserve">
+    <value>Konstitution</value>
+  </data>
+  <data name="Character_Intelligence" xml:space="preserve">
+    <value>Intelligenz</value>
+  </data>
+  <data name="Character_Wisdom" xml:space="preserve">
+    <value>Weisheit</value>
+  </data>
+  <data name="Character_Charisma" xml:space="preserve">
+    <value>Charisma</value>
+  </data>
+  <data name="Character_Inspiration" xml:space="preserve">
+    <value>Inspiration</value>
+  </data>
+  <data name="Character_TrainingBonus" xml:space="preserve">
+    <value>Übungsbonus</value>
+  </data>
+  <data name="Character_PassiveWisdomRecognition" xml:space="preserve">
+    <value>Passive Weisheit (Wahrnehmung)</value>
+  </data>
+  <data name="Character_RescueDices" xml:space="preserve">
+    <value>Rettungswürfe</value>
   </data>
 </root>
